fix: Remove whitespaces, change class name

--- a/backend/backend/static/scss/_badge.scss
+++ b/backend/backend/static/scss/_badge.scss
@@ -1,8 +1,8 @@
 .badge {
-  color:$white;
+  color: $white;
 }
 
-.badge-position {
+.wott-badge-position {
   position: absolute;
   top: 9px;
   right: 12px!important;
